# claude-statusline

./: CLAUDE.md  Cargo.toml  README.md  justfile
doc/: ex.json  line.md
examples/: main-block.rs  main0.rs  main1.rs
src/: main.rs
