[package]
name = "claude-statusline"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "claude-statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
dirs = "5"
owo-colors = "4.3.0"
